ad mvs